feature: new Data Structure

--- a/testFull.html
+++ b/testFull.html
@@ -36,8 +36,8 @@
 						<dl>
 							<div class="study">
 								<dt><h3>Baker East/West</h3></dt>
-								<dd>- Wednesdays at 8pm in Baker Lobby</dd>						
-								<dd>- Adam Joehelin <a href="mailto:joehlin.8@osu.edu">joehlin.8@osu.edu</a></dd>
+								<dd class="whenandwhere">- Wednesdays at 8pm in Baker Lobby</dd>						
+								<dd class="leader">- Adam Joehelin <a href="mailto:joehlin.8@osu.edu">joehlin.8@osu.edu</a></dd>
 							</div>
 							<div class="study">
 								<dt><h3>Morrison/Mack/Canfield</h3></dt>
