--- a/output.html
+++ b/output.html
@@ -114,7 +114,7 @@
     </div>
     <div class="panel panel-default">
      <div class="panel-heading">
-      <h4 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse2">The Gorls (South)</a></h4>
+      <h4 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse2">South Campus Women</a></h4>
      </div>
      <div id="collapse2" class="panel-collapse collapse">
       <div class="panel-body">
